crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__f401_preview_dunder_all_multiple_bindings.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F401 [*] `submodule.baz` imported but unused
 --> __init__.py:3:8
  |
2 | import submodule.bar
3 | import submodule.baz
  |        ^^^^^^^^^^^^^
4 | __all__ = ['submodule']
5 | FOO = 42
help: Remove unused import: `submodule.baz`
  |
2 | import submodule.bar
  - import submodule.baz
3 | __all__ = ['submodule']
  |
note: This is an unsafe fix and may change runtime behavior
