crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__f401_preview_first_party_submodule_dunder_all.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F401 [*] `submodule.a` imported but unused; consider removing, adding to `__all__`, or using a redundant alias
 --> __init__.py:2:8
  |
2 | import submodule.a
  |        ^^^^^^^^^^^
3 | __all__ = ['FOO']
4 | FOO = 42
help: Add `submodule` to __all__
  |
2 | import submodule.a
  - __all__ = ['FOO']
3 + __all__ = ['FOO', 'submodule']
4 | FOO = 42
  |
