crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__f401_type_checking.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F401 [*] `mlflow.pyfunc.loaders.chat_agent` imported but unused
 --> f401_preview_submodule.py:2:8
  |
2 | import mlflow.pyfunc.loaders.chat_agent
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
3 | import mlflow.pyfunc.loaders.chat_model
4 | import mlflow.pyfunc.loaders.code_model
help: Remove unused import: `mlflow.pyfunc.loaders.chat_agent`
  |
1 |
  - import mlflow.pyfunc.loaders.chat_agent
2 | import mlflow.pyfunc.loaders.chat_model
  |

F401 [*] `mlflow.pyfunc.loaders.chat_model` imported but unused
 --> f401_preview_submodule.py:3:8
  |
2 | import mlflow.pyfunc.loaders.chat_agent
3 | import mlflow.pyfunc.loaders.chat_model
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
4 | import mlflow.pyfunc.loaders.code_model
5 | from mlflow.utils.pydantic_utils import IS_PYDANTIC_V2_OR_NEWER
help: Remove unused import: `mlflow.pyfunc.loaders.chat_model`
  |
2 | import mlflow.pyfunc.loaders.chat_agent
  - import mlflow.pyfunc.loaders.chat_model
3 | import mlflow.pyfunc.loaders.code_model
  |

F401 [*] `mlflow.pyfunc.loaders.code_model` imported but unused
 --> f401_preview_submodule.py:4:8
  |
2 | import mlflow.pyfunc.loaders.chat_agent
3 | import mlflow.pyfunc.loaders.chat_model
4 | import mlflow.pyfunc.loaders.code_model
  |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
5 | from mlflow.utils.pydantic_utils import IS_PYDANTIC_V2_OR_NEWER
help: Remove unused import: `mlflow.pyfunc.loaders.code_model`
3 | import mlflow.pyfunc.loaders.chat_model
  - import mlflow.pyfunc.loaders.code_model
4 | from mlflow.utils.pydantic_utils import IS_PYDANTIC_V2_OR_NEWER
  |

F401 [*] `mlflow.pyfunc.loaders.responses_agent` imported but unused
 --> f401_preview_submodule.py:8:12
  |
7 | if IS_PYDANTIC_V2_OR_NEWER:
8 |     import mlflow.pyfunc.loaders.responses_agent
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: Remove unused import: `mlflow.pyfunc.loaders.responses_agent`
  |
7 | if IS_PYDANTIC_V2_OR_NEWER:
  -     import mlflow.pyfunc.loaders.responses_agent
8 +     pass
  |
