crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__f401_use_in_dunder_all.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F401 [*] `a.b` imported but unused
 --> f401_preview_submodule.py:3:8
  |
2 | import a
3 | import a.b
  |        ^^^
4 | __all__ = ["a"]
help: Remove unused import: `a.b`
  |
2 | import a
  - import a.b
3 | __all__ = ["a"]
  |
